added quiz builder + some other fixes
